fix layout grid structure wrap for footer and content

--- a/assets/sass/modules/_content.scss
+++ b/assets/sass/modules/_content.scss
@@ -2,9 +2,9 @@
 // Site Content
 //--------------------------------------------------------------
 .site-content {
-	@include span-columns(8);
-	@include shift(2);
-}
+
+} // .site-content
+
 
 //--------------------------------------------------------------
 // Posts and Pages
