--- a/assets/sass/modules/_footer.scss
+++ b/assets/sass/modules/_footer.scss
@@ -7,8 +7,9 @@
 } // .site-info
 
 .footer {
-	margin: 0 auto;
-	width: 80%;
+	// margin: 0 auto;
+	// width: 80%;
+
 	display: flex;
 	justify-content: space-between;
 
